--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,17 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.MainCounter{
+    text-align: center;
+}
+
+.MainCounter div{
+   
+    display: inline-block;
+    font-size: 100px;
+    background-color: black;
+    color: white;
+    padding: 10px;
+    
+     
+}
